# killport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/killport-cli/: Cargo.toml
crates/killport-cli/src/: main.rs
crates/killport-cli/tests/: cli_args.rs
crates/killport-core/: Cargo.toml
crates/killport-core/src/: appinfo.rs  autostart.rs  classify.rs  config.rs  docker.rs  framework.rs  guard.rs  kill.rs  lib.rs  ports.rs  process.rs  project.rs  restart.rs  scan.rs  service.rs
crates/killport-core/tests/: ports_integration.rs
docs/: README.md  UI-BRIEF.md
docs/architecture/: README.md
docs/config/: README.md
docs/features/autostart/: README.md
docs/features/docker-integration/: README.md
docs/features/framework-detection/: README.md
docs/features/notifications/: README.md
docs/features/port-scanning/: README.md
docs/features/process-classification/: README.md
docs/features/process-killing/: README.md
docs/features/process-restart/: README.md
docs/features/system-guard/: README.md
docs/features/windows-services/: README.md
docs/interfaces/cli/: README.md
docs/interfaces/desktop-ui/: README.md
scripts/: build.bat  dev.bat  gen-icons.bat  gen-icons.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  commands.rs  lib.rs  main.rs  notify.rs  probe.rs
ui/: index.html  tray.html
ui/scripts/: app.js  tray.js
ui/styles/: app.css  tokens.css  tray.css
