[workspace]
resolver = "2"
members = [
    "crates/killport-core",
    "crates/killport-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["episuarez"]

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
sysinfo = "0.33"
anyhow = "1"
serde_json = "1"
toml = "0.8"
