[package]
name = "killport-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "killport_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
killport-core = { path = "../crates/killport-core" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { workspace = true }
serde_json = "1"
arboard = "3"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
tokio = { version = "1", features = ["net", "io-util", "time", "macros"] }
qrcode = { version = "0.14", default-features = false }
